--- a/cgv_clone/src/main/resources/application.yml
+++ b/cgv_clone/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/cgv_clone_server?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+    url: ${DB_URL}
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: startree1011
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
 
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
@@ -12,3 +12,7 @@ spring:
     hibernate:
       format_sql: true
       ddl-auto: update
+
+  jwt:
+    secret: ${jwt.secret}
+    access-token-validity-ms: ${jwt.access-token-validity-ms}
